<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name" translatable="false">Pocket Tool</string>
    <string name="title_section1" translatable="false">Tip Calculator</string>
    <string name="title_section2" translatable="false">Unit Converter</string>
    <string name="title_section3" translatable="false">List</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_example" translatable="false">Example action</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="Home" translatable="false">&#xf015;</string>
    <string name="Ruler" translatable="false">&#xf0d0;</string>
    <string name="credits" translatable="false">&#xf274;</string>
    <string name="Flashlight" translatable="false">&#xf0e7;</string>
    <string name="List" translatable="false">&#xf0cb;</string>
    <string name="TipCalculator" translatable="false">&#xf0d6;</string>
    <string name="UnitConverter" translatable="false">&#xf1ec;</string>
    <string name="Sign" translatable="false">&#xf277;</string>
    <string name="Sketch" translatable="false">&#xf044;</string>
    <string name="Dictionary" translatable="false">&#xf02d;</string>
    <string name="Search" translatable="false">&#xf002;</string>
    <string name="undo" translatable="false">&#xf112;</string>
    <string name="redo" translatable="false">&#xf064;</string>
    <string name="eraser" translatable="false">&#xf12d;</string>
    <string name="clear" translatable="false">&#xf068;</string>
    <string name="size" translatable="false">&#xf055;</string>
    <string name="pencil" translatable="false">&#xf040;</string>
    <string name="save" translatable="false">&#xf0c7;</string>

</resources>
