<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000033"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#000000"
            android:fontFamily="OpenSans"
            android:text="Color"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/button1"
            android:background="#f39c12"
            android:fontFamily="OpenSans"
            android:text="@string/eraser"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/button2"
            android:background="#f39c12"
            android:fontFamily="OpenSans"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/size"
            android:textColor="#ffffff" />
        
        <Button
            android:id="@+id/button4"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/button3"
            android:background="#f39c12"
            android:fontFamily="OpenSans"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/undo"
            android:textColor="#ffffff" />
        
        <Button
            android:id="@+id/button5"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/button4"
            android:background="#f39c12"
            android:fontFamily="OpenSans"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/redo"
            android:textColor="#ffffff" />
        
        <Button
            android:id="@+id/button6"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/button4"
            android:background="#f39c12"
            android:fontFamily="OpenSans"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/save"
            android:textColor="#ffffff" />
        
        
    </LinearLayout>
    
    <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:max="100"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:visibility="invisible" />
    
    <RelativeLayout
        android:id="@+id/base"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1" >

    </RelativeLayout>

</RelativeLayout>